@@ -137,7 +137,6 @@ User.prototype.initCallbacks = function () {
         if (self.inChannel())
             return;
         if (typeof data.name != "string") {
-            self.kick("Bad joinChannel packet");
             return;
         }
         if (!data.name.match(/^[\w-_]{1,30}$/)) {
@@ -216,10 +215,6 @@ User.prototype.initCallbacks = function () {
         data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             if (typeof data.msg !== "string") {
-                self.socket.emit("kick", {
-                    reason: "Invalid chatMsg packet"
-                });
-                self.socket.disconnect(true);
                 return;
             }
             if (data.msg.indexOf("/afk") !== 0) {
@@ -324,7 +319,6 @@ User.prototype.initCallbacks = function () {
         data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             if (typeof data.query !== "string") {
-                self.kick("Bad searchMedia packet");
                 return;
             }
             if (data.source === "yt") {
@@ -497,7 +491,6 @@ User.prototype.initCallbacks = function () {
     self.socket.on("savePlaylist", function (data) {
         data = (typeof data !== "object") ? {} : data;
         if (typeof data.name !== "string") {
-            self.kick("Bad savePlaylist packet");
             return;
         }
         if (self.rank < 1) {
@@ -559,7 +552,6 @@ User.prototype.initCallbacks = function () {
     self.socket.on("deletePlaylist", function (data) {
         data = (typeof data !== "object") ? {} : data;
         if (typeof data.name != "string") {
-            self.kick("Bad deletePlaylist packet");
             return;
         }
 
